--- a/gpelose_OriginalHomework_week3.Rmd
+++ b/gpelose_OriginalHomework_week3.Rmd
@@ -5,26 +5,49 @@ date: "9/16/2019"
 output: html_document
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+Homework Question:
+Every Saturday, at the same time, a primatologist goes and sits in the forest in the morning and listens for titi monkey calls, counting the number of calls they hear in a 2 hour window from 5am to 7am. Based on previous knowledge, she believes that the mean number calls she will hear in that time is exactly 15. Let X represent the appropriate Poisson random variable of the number of calls heard in each monitoring session.
+
+1. What is the probability that she will hear more than 8 calls during any given session?
+
+```{r}
+ppois(8, lambda=15, lower=FALSE)
 ```
 
-## R Markdown
+2. What is the probability that she will hear no calls in a session?
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+```{r}
+dpois(0, lambda=15)
 ```
 
-## Including Plots
+3. What is the probability that she will hear exacty three calls in a session?
 
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
+```{r}
+dpois(3, lambda=15)
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+4. Plot the relevant Poisson mass function over the values in range 0 ≤ x ≤ 30.
+
+```{r}
+x <- 0:30
+dpois(x=x, lambda=15)
+data <- dpois(x=x, lambda=15)
+barplot(data, names.arg = x, space = 0, xlab="calls", ylab="probability", main = "Probability of Calls")
+```
+
+5. Simulate 104 results from this distribution (i.e., 2 years of Saturday monitoring sessions)
+
+```{r}
+rpois(104, lambda = 15)
+```
+
+6. Plot the simulated results using hist() and use xlim() to set the horizontal limits to be from 0 to 30. How does your histogram compare to the shape of the probability mass function you plotted above?
+
+```{r}
+x <- rpois(104, lambda = 15)
+hist(x, xlim= range(0:30), xlab="calls", main="Frequency of Calls")
+```
+
+
+
+
